--- a/app/(frontend)/styles/pages.css
+++ b/app/(frontend)/styles/pages.css
@@ -1,3 +1,98 @@
+
+.auth-body {
+  min-height: 100vh;
+  margin: 0;
+  background: linear-gradient(135deg, #3B82F6, #4F46E5 45%, #8B5CF6 100%);
+}
+
+
+.auth-container{
+    width: 50%;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    display: flex;
+    width: 60%;
+    border-radius: 10px;
+    background-color: white;
+    min-height: 400px;
+}
+
+.auth-container h2{
+    text-align: center;
+    font-size: 28px;
+}
+
+
+.auth-container .image-zone{
+    width: 45%;  
+}
+
+.auth-container .image-zone img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-bottom-right-radius: 10px;
+    border-top-right-radius: 10px;
+}
+
+.auth-container .form-zone{
+    width: 55%;
+    display: flex;
+    justify-content: center;
+    position: relative;
+}
+
+.auth-container .form-zone form{
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+    margin-top: 10px;
+    
+}
+
+.auth-container button{
+    background-color: blue;
+    border: none;
+    padding: 8px;
+    border-radius: 5px;
+    color: white;
+}
+
+.auth-container button:hover{
+    background-color: darkblue;
+    cursor: pointer;
+    transition: background-color 0.3s ease-in-out;
+}
+
 .signin-container{
-    background: linear-gradient(135deg, #3B82F6, #8B5CF6);
+    padding: 10px;
+    text-align: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.auth-container .form-group{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+}
+
+.auth-container .form-group label{
+    margin-bottom: 5px;
+    font-weight: bold;
+    font-size: 12px;
+    color: rgb(93, 93, 93);
+}
+
+.auth-container input{
+    padding: 8px;
+    width: 250px;
+    border-radius: 5px;
+    border: none;
+    outline: none;
+    background-color: rgb(218, 218, 218);
 }
