--- a/app/(frontend)/styles/pages.css
+++ b/app/(frontend)/styles/pages.css
@@ -1,5 +1,5 @@
 
-.auth-body {
+.auth-layout {
   min-height: 100vh;
   margin: 0;
   background: linear-gradient(135deg, #3B82F6, #4F46E5 45%, #8B5CF6 100%);
@@ -66,7 +66,7 @@
     transition: background-color 0.3s ease-in-out;
 }
 
-.signin-container{
+.signin-container, .signup-container{
     padding: 10px;
     text-align: center;
     position: absolute;
@@ -95,4 +95,11 @@
     border: none;
     outline: none;
     background-color: rgb(218, 218, 218);
+}
+
+.signin-container p{
+    margin-top: 15px;
+    text-align: left;
+    color: rgb(93, 93, 93);
+    font-size: 0.9em;
 }
