--- a/app/(frontend)/styles/pages.css
+++ b/app/(frontend)/styles/pages.css
@@ -97,9 +97,9 @@
     background-color: rgb(218, 218, 218);
 }
 
-.signin-container p{
+.signin-container p, .signup-container p{
     margin-top: 15px;
     text-align: left;
     color: rgb(93, 93, 93);
-    font-size: 0.9em;
+    font-size: 0.85em;
 }
