--- a/app/(frontend)/styles/pages.css
+++ b/app/(frontend)/styles/pages.css
@@ -103,3 +103,69 @@
     color: rgb(93, 93, 93);
     font-size: 0.85em;
 }
+
+.projects-container {
+    padding: 20px;
+    width: 100%;
+} 
+
+.projects-container h2 {
+    border-bottom: 1px solid var(--principal-text);
+    width: 40%;
+    padding-bottom: 10px;
+    padding-top: 30px;
+    color: var(--principal-text);
+    font-size: 26px;
+}
+
+.projects-container .projects-list{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    margin-top: 20px;
+}
+
+.project-card{
+    border: 2px solid var(--border);
+    width: 30%;
+    border-radius: 10px;
+    height: 70px;
+    padding: 5px;
+    background-color: var(--surface-color);
+    margin-bottom: 30px;
+    position: relative;
+}
+
+.project-card:hover{
+    cursor: pointer;
+    transform: scale(1.05);
+}
+
+.project-card .delete-button{
+    position: absolute;
+    top:50%;
+    transform: translateY(-50%);
+    right: 10px;
+    color: var(--error-color);
+    background: none;
+    border: none;
+    cursor: pointer;
+    font-size: 25px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.project-card p{
+    color: var(--secondary-text);
+    text-overflow: ellipsis;
+    font-size: 10px;
+    width: 85%;
+    display: -webkit-box;
+    -webkit-line-clamp: 2; 
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    text-overflow: ellipsis;
+
+}
+
