--- a/app/(frontend)/styles/components.css
+++ b/app/(frontend)/styles/components.css
@@ -122,3 +122,94 @@ nav:hover .label {
     opacity: 1;
     transition: opacity 0.4s ease-in-out;
 }
+
+.overlay {
+    position: fixed;
+    inset: 0;
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: 999;
+}
+
+.modal{
+    z-index:1000;
+    position: absolute;
+    background-color: white;
+    width: 40%;
+    left: 50%;
+    top:50%;
+    transform: translate(-50%, -50%);
+    border: 1px solid black;
+    padding: 10px;
+    border-radius: 5px;
+}
+
+.modal h2{
+    width: 100%;
+    text-align: center;
+    border-bottom: 1px solid var(--border);
+    padding-bottom: 10px;
+    margin-bottom: 10px;
+}
+
+.modal form{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 20px;
+}
+
+.modal .form-group{
+    display: flex;
+    flex-direction: column;
+    gap:5px;
+}
+
+.modal label{
+    color: rgb(93, 93, 93);
+    font-size: 12px;
+}
+
+.modal input, .modal textarea{
+    outline: none;
+    color: var(--principal-text);
+    outline: none;
+    border: none;
+    background-color: rgb(218, 218, 218);
+    border-radius: 8px;
+    padding: 8px;
+    resize: none;
+}
+
+.modal form button{
+    background-color: var(--color-primary);
+    border: none;
+    outline: none;
+    color: white;
+    padding: 6px;
+    border-radius: 8px;
+}
+
+.modal form button:hover{
+    background-color: var(--hover-primary);
+    cursor: pointer;
+}
+
+
+.close-modal{
+    position: absolute;
+    right: -7px;
+    top:-7px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 50%;
+    background-color: black;
+    color: white;
+    border: none;
+    outline: none;
+    padding: 4px;
+    cursor: pointer;
+    font-size: 10px;
+}
+
+
