--- a/app/(frontend)/styles/pages.css
+++ b/app/(frontend)/styles/pages.css
@@ -126,11 +126,11 @@
 }
 
 .project-card{
-    border: 2px solid var(--border);
+    box-shadow: 0 5px 12px rgba(0, 0, 0, 0.1);
     width: 30%;
     border-radius: 10px;
     height: 70px;
-    padding: 5px;
+    padding: 7px;
     background-color: var(--surface-color);
     margin-bottom: 30px;
     position: relative;
@@ -161,11 +161,32 @@
     text-overflow: ellipsis;
     font-size: 10px;
     width: 85%;
+    margin-top: 5px;
     display: -webkit-box;
     -webkit-line-clamp: 2; 
     -webkit-box-orient: vertical;
     overflow: hidden;
     text-overflow: ellipsis;
+}
 
+.projects-container .add-button{
+    margin-top: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 5px;
+    padding: 5px 10px;
+    border-radius: 5px;
+    border: none;
+    background-color: var(--success-color);
+    font-weight: bold;
+    color: var(--principal-text);
+    font-size: 14px;
+    cursor: pointer;
+    box-shadow: 0 5px 12px rgba(0, 0, 0, 0.1);
+}
+
+.projects-container .add-button:hover{
+    transform: scale(1.03);
 }
 
