--- a/app/(frontend)/styles/components.css
+++ b/app/(frontend)/styles/components.css
@@ -52,9 +52,10 @@ nav:hover .user span {
 nav .user img {
     width: 40px;
     height: 40px;
-    border-radius: 50%;
     margin-right: 12px;
     object-fit: cover;
+    border-radius: 50%;
+    display: block;
 }
 
 
