--- a/app/(frontend)/styles/global.css
+++ b/app/(frontend)/styles/global.css
@@ -11,3 +11,9 @@
     padding-left: 70px;
     background-color: var(--background-color);
 }
+
+p.alert{
+    width: 100%;
+    text-align: center;
+    margin-top: 30px;
+}
