--- a/app/(frontend)/styles/pages.css
+++ b/app/(frontend)/styles/pages.css
@@ -104,12 +104,12 @@
     font-size: 0.85em;
 }
 
-.projects-container {
+.projects-container, .project-container {
     padding: 20px;
     width: 100%;
 } 
 
-.projects-container h2 {
+.projects-container h2, .project-container h2 {
     border-bottom: 1px solid var(--principal-text);
     width: 40%;
     padding-bottom: 10px;
@@ -119,15 +119,15 @@
 }
 
 .projects-container .projects-list{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+    gap: 20px;
     margin-top: 20px;
 }
 
 .project-card{
     box-shadow: 0 5px 12px rgba(0, 0, 0, 0.1);
-    width: 30%;
+    width: 100%;
     border-radius: 10px;
     height: 70px;
     padding: 7px;
@@ -188,5 +188,116 @@
 
 .projects-container .add-button:hover{
     transform: scale(1.03);
+}
+
+.user-container{
+    background-color: white;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    box-shadow: 0 0 15px rgba(0, 0, 0, 0.4);
+    border-radius: 18px;
+    padding: 20px;
+    width: 45%;
+    text-align: center;
+}
+
+.user-container .img-zone{
+    width: 100%;
+    text-align: center;
+    border-bottom: 1px solid var(--border);
+    padding-bottom: 15px;
+}
+
+.user-container .img-zone img{
+    width: 150px;
+    height: 150px;
+    border-radius: 50%;
+    object-fit: cover;
+}
+
+.user-container table{
+    width: 100%;
+    border-collapse: collapse;
+}
+
+.user-container th, .user-container td{
+    border-bottom: 1px solid var(--border);
+    text-align: left;
+    padding: 15px 8px;
+}
+
+
+.user-container button{
+    margin-top: 20px;
+    background-color: var(--color-secondary);
+    border: none;
+    cursor: pointer;
+    padding: 10px 20px;
+    border-radius: 20px;
+    cursor: pointer;
+    color: white;
+    font-weight: bold;
+}
+
+.user-container button:hover{
+    background-color: var(--hover-secondary);
+    
+}
+
+
+.user-container form{
+    padding: 10px;
+}
+
+.user-container form .form-group{
+    display: flex;
+    flex-direction: column;
+    text-align: left;
+    margin-bottom: 10px;
+    
+}
+
+.user-container .form-group label{
+    margin-bottom: 5px;
+    font-weight: bold;
+    font-size: 12px;
+    color: rgb(93, 93, 93);
+}
+
+.user-container input{
+    padding: 8px;
+    width: 250px;
+    border-radius: 5px;
+    border: none;
+    outline: none;
+    background-color: rgb(218, 218, 218);
+    width: 100%;
+}
+
+.user-container h2{
+    margin-bottom: 20px;
+    padding-bottom: 20px;
+    border-bottom: 1px solid var(--border);
+}
+
+.tasks-list{
+    width: 100%;
+    padding: 20px;
+    margin-top: 20px;
+    box-shadow: 0 0 15px rgba(0, 0, 0, 0.4);
+    border-radius: 15px;
+}
+
+.tasks-list table{
+    width: 100%;
+    border-collapse: collapse;
+}
+
+.tasks-list th, .tasks-list td{
+    border-bottom: 1px solid var(--border);
+    padding: 20px;
+    text-align: center;
 }
 
